# StephanePiazo

./: .gitignore  CHANGELOG.md  CHANGELOG_LOYERS_2024.md  INTEGRATION_COMPLETE.md  INTEGRATION_LOYERS_RESUME.md  LICENSE  QUICKSTART.md  README.md  config_urls.example.py  main.py  pyproject.toml  requirements.txt
.continue/rules/: CONTINUE.md
docs/: ANALYSE_COMBINEE.md  CUSTOM_URLS.md  GUIDE_LOYERS.md  MIGRATION_LOYERS_2024.md  RENT_MODULE_README.md
examples/: analyze_city.py  analyze_rents.py  combined_analysis_example.py  download_and_analyze_rents_2024.py  download_with_custom_urls.py
notebooks/: exploration.ipynb
outputs/: .gitkeep
scripts/: check_urls.py  setup_config.py  test_encoding.py
src/: __init__.py
src/analysis/: __init__.py  combined_analyzer.py  price_analyzer.py  rent_analyzer.py
src/data/: __init__.py  data_cleaner.py  dvf_downloader.py  rent_downloader.py
src/models/: __init__.py  city.py
src/utils/: __init__.py  config.py
tests/: test_custom_urls.py  test_dvf_downloader.py  test_price_analyzer.py  test_rent_analyzer.py
